--- a/app/views/goals/index.html.erb
+++ b/app/views/goals/index.html.erb
@@ -1,24 +1,21 @@
 <div class="column">
-<h2>Things to Do</h2>
-    <% @pending_goals.each do |goal| %>
-      <div class="goal">
-        <%= link_to goal.title, goal %> 
-        <%= link_to "Mark Complete", mark_completed_path(goal) %>
-      </div>
-    <% end %>
+  <h2>Things to Do</h2>
+  <% @pending_goals.each do |goal| %>
+    <div class="goal">
+      <%= link_to goal.title, goal %> 
+      <%= link_to "Mark Complete", mark_completed_path(goal), class: "mark-it" %>
+    </div>
+  <% end %>
 </div>
 
 <div class="column">
-<h2>Things I've Done</h2>
-    <% @completed_goals.each do |goal| %>
-      <div class="goal completed">
-        <%= goal.title %>
-        <%= goal.description %>
-        <%= link_to 'Show', goal %>
-        <%= link_to 'Edit', edit_goal_path(goal) %>
-        <%= link_to 'Destroy', goal, method: :delete, data: { confirm: 'Are you sure?' } %>
-      </div>
-    <% end %>
+  <h2>Things I've Done</h2>
+  <% @completed_goals.each do |goal| %>
+    <div class="goal completed">
+      <%= link_to goal.title, goal %> 
+      <%= link_to "Mark Inomplete", mark_incomplete_path(goal), class: "mark-it" %>
+    </div>
+<% end %>
 
   </div>
-<%= link_to 'New Goal', new_goal_path %>
+  <%= link_to 'New Goal', new_goal_path %>
