--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,11 +3,21 @@
 <head>
   <title>Bucketlister</title>
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
+  <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
+  <link href="/stylesheets/print.css" media="print" rel="stylesheet" type="text/css" />
+  <!--[if IE]>
+      <link href="/stylesheets/ie.css" media="screen, projection" rel="stylesheet" type="text/css" />
+      <![endif]-->
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
-
+  <div id="info-bar"> 
+    <div class="side-pads">
+      <div class="circle" style="background-image: url('https://graph.facebook.com/counterbeing/picture?width=200&height=200');"></div></div>
+      <h1>CORY LOGAN'S BUCKET LIST</h1>
+  </div>
+   
   <div id="container">
     <%= yield %>
   </div>
