--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,8 +14,15 @@
 <body>
   <div id="info-bar"> 
     <div class="side-pads">
-      <div class="circle" style="background-image: url('https://graph.facebook.com/counterbeing/picture?width=200&height=200');"></div></div>
-      <h1>CORY LOGAN'S BUCKET LIST</h1>
+      <div id="title-box">
+        <h2>BUCKETLISTr</h2>
+        <div class="circle" style="background-image: url('https://graph.facebook.com/counterbeing/picture?width=200&height=200');"></div>
+      </div><!-- end #title box -->
+      <div id="stats-box">
+        <span class="stat">XNumber</span>
+        <a href="/auth/facebook" id="fb_login_link">Login with Facebook</a>
+      </div><!-- end #stats-box -->
+    </div>
   </div>
    
   <div id="container">
