--- a/app/views/goals/index.html.erb
+++ b/app/views/goals/index.html.erb
@@ -1,5 +1,6 @@
 <div class="column">
   <h2>Things to Do</h2>
+  <%= render 'form' %>
   <% @pending_goals.each do |goal| %>
     <div class="goal">
       <%= link_to goal.title, goal %> 
@@ -18,4 +19,3 @@
 <% end %>
 
   </div>
-  <%= link_to 'New Goal', new_goal_path %>
