getting closer to some backbone stuff that works, and also got facebook login working... there's an error right now due to failing when not logging in.

--- a/app/assets/stylesheets/screen.css
+++ b/app/assets/stylesheets/screen.css
@@ -204,5 +204,5 @@ textarea {
 
 /* line 121, ../../../sass/screen.scss */
 #incomplete-goals {
-  background-color: blue;
+  background-color: #e04429;
 }
