--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,20 +7,23 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-  <% if false %><!-- commented out for dev ease -->
   <div id="info-bar"> 
     <div class="side-pads">
       <div id="title-box">
         <h2>BUCKETLISTr</h2>
-        <div class="circle" style="background-image: url('https://graph.facebook.com/counterbeing/picture?width=200&height=200');"></div>
+        <div class="circle" style="background-image: url('<%= profile_pic_url(200, 200) %>');"></div>
       </div><!-- end #title box -->
       <div id="stats-box">
-        <span class="stat">XNumber</span>
-        <a href="/auth/facebook" id="fb_login_link">Login with Facebook</a>
+        <% if current_user %>
+          <strong><%= current_user.name %></strong>
+          <%= link_to "Sign out", signout_path, id: "sign_out" %>
+        <% else %>
+          <a href="/auth/facebook" id="fb_login_link">Login with Facebook</a>
+        <% end %>
+        
       </div><!-- end #stats-box -->
     </div><!-- end side-pads -->
   </div>
-<% end %>
    
   <div id="container">
     <%= yield %>
