--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,8 +20,8 @@
         <% else %>
           <a href="/auth/facebook" id="fb_login_link">Login with Facebook</a>
         <% end %>
-        
       </div><!-- end #stats-box -->
+      <div id="goal-stats">GOALSTATS</div>
     </div><!-- end side-pads -->
   </div>
    
