--- a/app/assets/stylesheets/screen.css
+++ b/app/assets/stylesheets/screen.css
@@ -74,14 +74,14 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
   src: local("Share Tech"), local("ShareTech-Regular"), url(http://themes.googleusercontent.com/static/fonts/sharetech/v1/riJWcvd3sYdxJpiCWZvUGL3hpw3pgy2gAi-Ip7WPMi0.woff) format("woff");
 }
 
-/* line 17, ../../../sass/screen.scss */
+/* line 25, ../../../sass/screen.scss */
 body {
-  color: #8C3A2B;
+  color: #8c3a2b;
   font-family: 'Share Tech', sans-serif;
-  background-color: #EE6952;
+  background-color: #ee6952;
 }
 
-/* line 24, ../../../sass/screen.scss */
+/* line 32, ../../../sass/screen.scss */
 h2 {
   margin-top: 20px;
   margin-bottom: 10px;
@@ -89,7 +89,7 @@ h2 {
   text-transform: uppercase;
 }
 
-/* line 30, ../../../sass/screen.scss */
+/* line 38, ../../../sass/screen.scss */
 h3 {
   margin-top: 20px;
   margin-bottom: 10px;
@@ -97,7 +97,7 @@ h3 {
   text-transform: uppercase;
 }
 
-/* line 36, ../../../sass/screen.scss */
+/* line 44, ../../../sass/screen.scss */
 #container {
   width: 80%;
   margin-left: auto;
@@ -105,19 +105,19 @@ h3 {
   margin-top: 50px;
 }
 
-/* line 44, ../../../sass/screen.scss */
+/* line 52, ../../../sass/screen.scss */
 p {
   margin-bottom: 10px;
   margin-top: 10px;
 }
 
-/* line 49, ../../../sass/screen.scss */
+/* line 57, ../../../sass/screen.scss */
 a {
   color: white;
   text-decoration: none;
 }
 
-/* line 54, ../../../sass/screen.scss */
+/* line 62, ../../../sass/screen.scss */
 .goal a {
   text-decoration: none;
   margin-bottom: 15px;
@@ -127,24 +127,24 @@ a {
   line-height: 35px;
 }
 
-/* line 62, ../../../sass/screen.scss */
+/* line 70, ../../../sass/screen.scss */
 #completed-goals {
   text-decoration: line-through;
 }
 
-/* line 66, ../../../sass/screen.scss */
+/* line 74, ../../../sass/screen.scss */
 a.mark-it {
   font-size: 15px;
   text-decoration: none;
 }
 
-/* line 68, ../../../sass/screen.scss */
+/* line 76, ../../../sass/screen.scss */
 .column {
   width: 50%;
   float: left;
 }
 
-/* line 75, ../../../sass/screen.scss */
+/* line 83, ../../../sass/screen.scss */
 .circle {
   width: 200px;
   height: 200px;
@@ -160,7 +160,7 @@ a.mark-it {
   margin-top: 20px;
 }
 
-/* line 86, ../../../sass/screen.scss */
+/* line 94, ../../../sass/screen.scss */
 #title-box {
   text-align: center;
   width: 220px;
@@ -168,14 +168,14 @@ a.mark-it {
   float: left;
 }
 
-/* line 93, ../../../sass/screen.scss */
-#stats-box {
-  text-align: center;
-  margin-left: auto;
-  margin-right: auto;
+/* line 101, ../../../sass/screen.scss */
+#top-nav {
+  position: absolute;
+  right: 0px;
+  top: 30px;
 }
 
-/* line 98, ../../../sass/screen.scss */
+/* line 106, ../../../sass/screen.scss */
 #info-bar {
   background-color: #222222;
   overflow: auto;
@@ -183,13 +183,14 @@ a.mark-it {
   padding-bottom: 50px;
 }
 
-/* line 104, ../../../sass/screen.scss */
+/* line 112, ../../../sass/screen.scss */
 .side-pads {
   width: 80%;
   margin: auto;
+  position: relative;
 }
 
-/* line 109, ../../../sass/screen.scss */
+/* line 118, ../../../sass/screen.scss */
 input[type="text"] {
   width: 90%;
   border: 0px;
@@ -203,7 +204,7 @@ input[type="text"] {
   margin-bottom: 20px;
 }
 
-/* line 122, ../../../sass/screen.scss */
+/* line 131, ../../../sass/screen.scss */
 textarea {
   width: 90%;
   border: 0px;
@@ -217,20 +218,52 @@ textarea {
   margin-bottom: 20px;
 }
 
-/* line 135, ../../../sass/screen.scss */
-#incomplete-goals {
-  background-color: #e04429;
-}
-
-/* line 139, ../../../sass/screen.scss */
+/* line 145, ../../../sass/screen.scss */
 #table-of-contents {
   float: left;
   max-width: 30%;
   margin-right: 40px;
 }
 
-/* line 146, ../../../sass/screen.scss */
+/* line 152, ../../../sass/screen.scss */
 #contents {
   max-width: 60%;
   float: left;
+}
+
+/* line 157, ../../../sass/screen.scss */
+.button {
+  color: #ee6952;
+  border: 1px solid #ee6952;
+  padding: 5px;
+  margin: 0px 5px 0px 5px;
+}
+
+/* line 166, ../../../sass/screen.scss */
+#goal-stats {
+  margin-top: 100px;
+  text-transform: uppercase;
+  font-size: 30px;
+  position: absolute;
+  right: 0px;
+  color: #ee6952;
+}
+/* line 173, ../../../sass/screen.scss */
+#goal-stats div {
+  cursor: pointer;
+  margin: 10px 0px 10px 0px;
+}
+/* line 177, ../../../sass/screen.scss */
+#goal-stats .circle-stat {
+  margin-right: 10px;
+  font-size: 40px;
+  display: inline-block;
+  width: 60px;
+  height: 60px;
+  line-height: 60px;
+  text-align: center;
+  border-radius: 30px;
+  top: -20px;
+  background-color: #ee6952;
+  color: white;
 }
