--- a/app/assets/stylesheets/screen.css
+++ b/app/assets/stylesheets/screen.css
@@ -97,7 +97,12 @@ h3 {
   text-transform: uppercase;
 }
 
-/* line 44, ../../../sass/screen.scss */
+/* line 46, ../../../sass/screen.scss */
+ul {
+  list-style-type: circle;
+}
+
+/* line 50, ../../../sass/screen.scss */
 #container {
   width: 80%;
   margin-left: auto;
@@ -105,19 +110,19 @@ h3 {
   margin-top: 50px;
 }
 
-/* line 52, ../../../sass/screen.scss */
+/* line 58, ../../../sass/screen.scss */
 p {
   margin-bottom: 10px;
   margin-top: 10px;
 }
 
-/* line 57, ../../../sass/screen.scss */
+/* line 63, ../../../sass/screen.scss */
 a {
   color: white;
   text-decoration: none;
 }
 
-/* line 62, ../../../sass/screen.scss */
+/* line 68, ../../../sass/screen.scss */
 .goal a {
   text-decoration: none;
   margin-bottom: 15px;
@@ -127,24 +132,24 @@ a {
   line-height: 35px;
 }
 
-/* line 70, ../../../sass/screen.scss */
+/* line 76, ../../../sass/screen.scss */
 #completed-goals {
   text-decoration: line-through;
 }
 
-/* line 74, ../../../sass/screen.scss */
+/* line 80, ../../../sass/screen.scss */
 a.mark-it {
   font-size: 15px;
   text-decoration: none;
 }
 
-/* line 76, ../../../sass/screen.scss */
+/* line 82, ../../../sass/screen.scss */
 .column {
   width: 50%;
   float: left;
 }
 
-/* line 83, ../../../sass/screen.scss */
+/* line 89, ../../../sass/screen.scss */
 .circle {
   width: 200px;
   height: 200px;
@@ -160,7 +165,7 @@ a.mark-it {
   margin-top: 20px;
 }
 
-/* line 94, ../../../sass/screen.scss */
+/* line 100, ../../../sass/screen.scss */
 #title-box {
   text-align: center;
   width: 220px;
@@ -168,14 +173,14 @@ a.mark-it {
   float: left;
 }
 
-/* line 101, ../../../sass/screen.scss */
+/* line 107, ../../../sass/screen.scss */
 #top-nav {
   position: absolute;
   right: 0px;
   top: 30px;
 }
 
-/* line 106, ../../../sass/screen.scss */
+/* line 112, ../../../sass/screen.scss */
 #info-bar {
   background-color: #222222;
   overflow: auto;
@@ -183,14 +188,14 @@ a.mark-it {
   padding-bottom: 50px;
 }
 
-/* line 112, ../../../sass/screen.scss */
+/* line 118, ../../../sass/screen.scss */
 .side-pads {
   width: 80%;
   margin: auto;
   position: relative;
 }
 
-/* line 118, ../../../sass/screen.scss */
+/* line 124, ../../../sass/screen.scss */
 input[type="text"] {
   width: 90%;
   border: 0px;
@@ -204,7 +209,7 @@ input[type="text"] {
   margin-bottom: 20px;
 }
 
-/* line 131, ../../../sass/screen.scss */
+/* line 137, ../../../sass/screen.scss */
 textarea {
   width: 90%;
   border: 0px;
@@ -218,28 +223,32 @@ textarea {
   margin-bottom: 20px;
 }
 
-/* line 145, ../../../sass/screen.scss */
+/* line 151, ../../../sass/screen.scss */
 #table-of-contents {
   float: left;
   max-width: 30%;
   margin-right: 40px;
 }
 
-/* line 152, ../../../sass/screen.scss */
+/* line 158, ../../../sass/screen.scss */
 #contents {
   max-width: 60%;
   float: left;
 }
 
-/* line 157, ../../../sass/screen.scss */
+/* line 163, ../../../sass/screen.scss */
 .button {
   color: #ee6952;
   border: 1px solid #ee6952;
   padding: 5px;
   margin: 0px 5px 0px 5px;
 }
+/* line 168, ../../../sass/screen.scss */
+.button:hover {
+  color: white;
+}
 
-/* line 166, ../../../sass/screen.scss */
+/* line 175, ../../../sass/screen.scss */
 #goal-stats {
   margin-top: 100px;
   text-transform: uppercase;
@@ -248,12 +257,12 @@ textarea {
   right: 0px;
   color: #ee6952;
 }
-/* line 173, ../../../sass/screen.scss */
+/* line 182, ../../../sass/screen.scss */
 #goal-stats div {
   cursor: pointer;
   margin: 10px 0px 10px 0px;
 }
-/* line 177, ../../../sass/screen.scss */
+/* line 186, ../../../sass/screen.scss */
 #goal-stats .circle-stat {
   margin-right: 10px;
   font-size: 40px;
