--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -41,6 +41,12 @@ h3{
   font-size: 30px;
   text-transform: uppercase;
 }
+
+
+ul{
+  list-style-type:circle;
+}
+
 #container{
   width: 80%;
   margin-left: auto;
@@ -159,6 +165,9 @@ textarea{
   border: 1px solid $brightRed;
   padding: 5px;
   margin: 0px 5px 0px 5px;
+  &:hover{
+    color: white;
+  }
 }
 
 
