--- a/app/assets/stylesheets/_fontcustom.scss
+++ b/app/assets/stylesheets/_fontcustom.scss
@@ -4,11 +4,11 @@
 
 @font-face {
   font-family: "fontcustom";
-  src: url("../fonts/fontcustom_5c41e9bc16555cd4f3f28a9d53228bdb.eot");
-  src: url("../fonts/fontcustom_5c41e9bc16555cd4f3f28a9d53228bdb.eot?#iefix") format("embedded-opentype"),
-       url("../fonts/fontcustom_5c41e9bc16555cd4f3f28a9d53228bdb.woff") format("woff"),
-       url("../fonts/fontcustom_5c41e9bc16555cd4f3f28a9d53228bdb.ttf") format("truetype"),
-       url("../fonts/fontcustom_5c41e9bc16555cd4f3f28a9d53228bdb.svg#fontcustom") format("svg");
+  src: url("/assets/fontcustom_6f29ebcd178fc871bd4b216efb46bad1.eot");
+  src: url("/assets/fontcustom_6f29ebcd178fc871bd4b216efb46bad1.eot?#iefix") format("embedded-opentype"),
+       url("/assets/fontcustom_6f29ebcd178fc871bd4b216efb46bad1.woff") format("woff"),
+       url("/assets/fontcustom_6f29ebcd178fc871bd4b216efb46bad1.ttf") format("truetype"),
+       url("/assets/fontcustom_6f29ebcd178fc871bd4b216efb46bad1.svg#fontcustom") format("svg");
   font-weight: normal;
   font-style: normal;
 }
@@ -16,7 +16,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: "fontcustom";
-    src: url("../fonts/fontcustom_5c41e9bc16555cd4f3f28a9d53228bdb.svg#fontcustom") format("svg");
+    src: url("/assets/fontcustom_6f29ebcd178fc871bd4b216efb46bad1.svg#fontcustom") format("svg");
   }
 }
 
@@ -25,7 +25,8 @@
 [data-icon]:before,
 .icon-check:before,
 .icon-circle-open:before,
-.icon-pencil:before {
+.icon-pencil:before,
+.icon-x:before {
   display: inline-block;
   font-family: "fontcustom";
   font-style: normal;
@@ -41,3 +42,4 @@
 .icon-check:before { content: "\f100"; }
 .icon-circle-open:before { content: "\f101"; }
 .icon-pencil:before { content: "\f103"; }
+.icon-x:before { content: "\f104"; }
