--- a/app/views/styleguide/fontcustom-preview.html
+++ b/app/views/styleguide/fontcustom-preview.html
@@ -141,11 +141,11 @@
 
       @font-face {
   font-family: "fontcustom";
-  src: url("../../assets/fonts/fontcustom_5c41e9bc16555cd4f3f28a9d53228bdb.eot");
-  src: url("../../assets/fonts/fontcustom_5c41e9bc16555cd4f3f28a9d53228bdb.eot?#iefix") format("embedded-opentype"),
-       url("../../assets/fonts/fontcustom_5c41e9bc16555cd4f3f28a9d53228bdb.woff") format("woff"),
-       url("../../assets/fonts/fontcustom_5c41e9bc16555cd4f3f28a9d53228bdb.ttf") format("truetype"),
-       url("../../assets/fonts/fontcustom_5c41e9bc16555cd4f3f28a9d53228bdb.svg#fontcustom") format("svg");
+  src: url("../../assets/fonts/fontcustom_6f29ebcd178fc871bd4b216efb46bad1.eot");
+  src: url("../../assets/fonts/fontcustom_6f29ebcd178fc871bd4b216efb46bad1.eot?#iefix") format("embedded-opentype"),
+       url("../../assets/fonts/fontcustom_6f29ebcd178fc871bd4b216efb46bad1.woff") format("woff"),
+       url("../../assets/fonts/fontcustom_6f29ebcd178fc871bd4b216efb46bad1.ttf") format("truetype"),
+       url("../../assets/fonts/fontcustom_6f29ebcd178fc871bd4b216efb46bad1.svg#fontcustom") format("svg");
   font-weight: normal;
   font-style: normal;
 }
@@ -153,7 +153,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: "fontcustom";
-    src: url("../../assets/fonts/fontcustom_5c41e9bc16555cd4f3f28a9d53228bdb.svg#fontcustom") format("svg");
+    src: url("../../assets/fonts/fontcustom_6f29ebcd178fc871bd4b216efb46bad1.svg#fontcustom") format("svg");
   }
 }
 
@@ -162,7 +162,8 @@
       [data-icon]:before,
       .icon-check:before,
 .icon-circle-open:before,
-.icon-pencil:before {
+.icon-pencil:before,
+.icon-x:before {
         display: inline-block;
         font-family: "fontcustom";
         font-style: normal;
@@ -178,6 +179,7 @@
       .icon-check:before { content: "\f100"; }
 .icon-circle-open:before { content: "\f101"; }
 .icon-pencil:before { content: "\f103"; }
+.icon-x:before { content: "\f104"; }
     </style>
 
     <!--[if lte IE 8]><script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
@@ -193,7 +195,7 @@
   <body class="characters-off">
     <div id="page" class="container">
       <header>
-        <h1>fontcustom contains 3 glyphs:</h1>
+        <h1>fontcustom contains 4 glyphs:</h1>
         <a onclick="toggleCharacters(); return false;" href="#">Toggle Preview Characters</a>
       </header>
 
@@ -234,6 +236,19 @@
         <div class="usage">
           <input class="class" type="text" readonly="readonly" onClick="this.select();" value=".icon-pencil" />
           <input class="point" type="text" readonly="readonly" onClick="this.select();" value="&amp;#xf103;" />
+        </div>
+      </div>
+      
+      <div class="glyph">
+        <div class="preview-glyphs">
+          <span class="step size-12"><span class="letters">Pp</span><i id="icon-x" class="icon-x"></i></span><span class="step size-14"><span class="letters">Pp</span><i id="icon-x" class="icon-x"></i></span><span class="step size-16"><span class="letters">Pp</span><i id="icon-x" class="icon-x"></i></span><span class="step size-18"><span class="letters">Pp</span><i id="icon-x" class="icon-x"></i></span><span class="step size-21"><span class="letters">Pp</span><i id="icon-x" class="icon-x"></i></span><span class="step size-24"><span class="letters">Pp</span><i id="icon-x" class="icon-x"></i></span><span class="step size-36"><span class="letters">Pp</span><i id="icon-x" class="icon-x"></i></span><span class="step size-48"><span class="letters">Pp</span><i id="icon-x" class="icon-x"></i></span><span class="step size-60"><span class="letters">Pp</span><i id="icon-x" class="icon-x"></i></span><span class="step size-72"><span class="letters">Pp</span><i id="icon-x" class="icon-x"></i></span>
+        </div>
+        <div class="preview-scale">
+          <span class="step">12</span><span class="step">14</span><span class="step">16</span><span class="step">18</span><span class="step">21</span><span class="step">24</span><span class="step">36</span><span class="step">48</span><span class="step">60</span><span class="step">72</span>
+        </div>
+        <div class="usage">
+          <input class="class" type="text" readonly="readonly" onClick="this.select();" value=".icon-x" />
+          <input class="point" type="text" readonly="readonly" onClick="this.select();" value="&amp;#xf104;" />
         </div>
       </div>
       
