--- a/app/views/goals/index.html.erb
+++ b/app/views/goals/index.html.erb
@@ -1,11 +1,11 @@
-<div class="column to-do">
-  <h2>Things to Do</h2>
-  <div class="to-do">
+<div class="column ">
+  <div class="goals">
   </div>
 </div>
 
 <div class="column">
-  <h2>Things I've Done</h2>
-  <div class="done">
+  <div id="detail">
   </div>
 </div>
+
+<div id="dark-zone"></div>
