--- a/app/assets/stylesheets/screen.css
+++ b/app/assets/stylesheets/screen.css
@@ -88,8 +88,12 @@ h2 {
   font-size: 40px;
   text-transform: uppercase;
 }
+/* line 37, ../../../sass/screen.scss */
+h2 i {
+  color: white;
+}
 
-/* line 38, ../../../sass/screen.scss */
+/* line 39, ../../../sass/screen.scss */
 h3 {
   margin-top: 20px;
   margin-bottom: 10px;
@@ -97,12 +101,12 @@ h3 {
   text-transform: uppercase;
 }
 
-/* line 46, ../../../sass/screen.scss */
+/* line 47, ../../../sass/screen.scss */
 ul {
   list-style-type: circle;
 }
 
-/* line 50, ../../../sass/screen.scss */
+/* line 51, ../../../sass/screen.scss */
 #container {
   width: 80%;
   margin-left: auto;
@@ -110,46 +114,54 @@ ul {
   margin-top: 50px;
 }
 
-/* line 58, ../../../sass/screen.scss */
+/* line 59, ../../../sass/screen.scss */
 p {
   margin-bottom: 10px;
   margin-top: 10px;
 }
 
-/* line 63, ../../../sass/screen.scss */
+/* line 64, ../../../sass/screen.scss */
 a {
   color: white;
   text-decoration: none;
 }
 
-/* line 69, ../../../sass/screen.scss */
+/* line 70, ../../../sass/screen.scss */
 .goal {
   text-decoration: none;
-  margin-bottom: 15px;
-  margin-top: 15px;
+  padding: 5px 0px 5px 0px;
   color: white;
   font-size: 20px;
   line-height: 25px;
 }
+/* line 76, ../../../sass/screen.scss */
+.goal .icon {
+  color: #ee6952;
+  cursor: pointer;
+}
+/* line 80, ../../../sass/screen.scss */
+.goal:hover > i {
+  color: #8c3a2b;
+}
 
-/* line 77, ../../../sass/screen.scss */
+/* line 84, ../../../sass/screen.scss */
 #completed-goals {
   text-decoration: line-through;
 }
 
-/* line 81, ../../../sass/screen.scss */
+/* line 88, ../../../sass/screen.scss */
 a.mark-it {
   font-size: 15px;
   text-decoration: none;
 }
 
-/* line 83, ../../../sass/screen.scss */
+/* line 90, ../../../sass/screen.scss */
 .column {
   width: 50%;
   float: left;
 }
 
-/* line 90, ../../../sass/screen.scss */
+/* line 97, ../../../sass/screen.scss */
 .circle {
   width: 200px;
   height: 200px;
@@ -165,7 +177,7 @@ a.mark-it {
   margin-top: 20px;
 }
 
-/* line 101, ../../../sass/screen.scss */
+/* line 108, ../../../sass/screen.scss */
 #title-box {
   text-align: center;
   width: 220px;
@@ -173,14 +185,14 @@ a.mark-it {
   float: left;
 }
 
-/* line 108, ../../../sass/screen.scss */
+/* line 115, ../../../sass/screen.scss */
 #top-nav {
   position: absolute;
   right: 0px;
   top: 30px;
 }
 
-/* line 113, ../../../sass/screen.scss */
+/* line 120, ../../../sass/screen.scss */
 #info-bar {
   background-color: #222222;
   overflow: auto;
@@ -188,14 +200,14 @@ a.mark-it {
   padding-bottom: 50px;
 }
 
-/* line 119, ../../../sass/screen.scss */
+/* line 126, ../../../sass/screen.scss */
 .side-pads {
   width: 80%;
   margin: auto;
   position: relative;
 }
 
-/* line 125, ../../../sass/screen.scss */
+/* line 132, ../../../sass/screen.scss */
 input[type="text"] {
   width: 90%;
   border: 0px;
@@ -209,7 +221,7 @@ input[type="text"] {
   margin-bottom: 20px;
 }
 
-/* line 138, ../../../sass/screen.scss */
+/* line 145, ../../../sass/screen.scss */
 textarea {
   width: 90%;
   border: 0px;
@@ -223,32 +235,32 @@ textarea {
   margin-bottom: 20px;
 }
 
-/* line 152, ../../../sass/screen.scss */
+/* line 159, ../../../sass/screen.scss */
 #table-of-contents {
   float: left;
   max-width: 30%;
   margin-right: 40px;
 }
 
-/* line 159, ../../../sass/screen.scss */
+/* line 166, ../../../sass/screen.scss */
 #contents {
   max-width: 60%;
   float: left;
 }
 
-/* line 164, ../../../sass/screen.scss */
+/* line 171, ../../../sass/screen.scss */
 .button {
   color: #ee6952;
   border: 1px solid #ee6952;
   padding: 2px 5px 2px 5px;
   margin: 0px 5px 0px 5px;
 }
-/* line 169, ../../../sass/screen.scss */
+/* line 176, ../../../sass/screen.scss */
 .button:hover {
   color: white;
 }
 
-/* line 176, ../../../sass/screen.scss */
+/* line 183, ../../../sass/screen.scss */
 #goal-stats {
   margin-top: 100px;
   text-transform: uppercase;
@@ -257,12 +269,12 @@ textarea {
   right: 0px;
   color: #ee6952;
 }
-/* line 183, ../../../sass/screen.scss */
+/* line 190, ../../../sass/screen.scss */
 #goal-stats div {
   cursor: pointer;
   margin: 10px 0px 10px 0px;
 }
-/* line 187, ../../../sass/screen.scss */
+/* line 194, ../../../sass/screen.scss */
 #goal-stats .circle-stat {
   margin-right: 10px;
   font-size: 40px;
@@ -275,4 +287,28 @@ textarea {
   top: -20px;
   background-color: #ee6952;
   color: white;
+}
+
+/* line 210, ../../../sass/screen.scss */
+#detail {
+  background-color: #8c3a2b;
+  min-height: 100px;
+}
+
+/* line 216, ../../../sass/screen.scss */
+#dark-zone {
+  position: absolute;
+  z-index: -100;
+  width: 50%;
+  height: 100%;
+  top: 0px;
+  bottom: 0px;
+  right: 0px;
+  background-color: #8c3a2b;
+  min-height: 100px;
+}
+
+/* line 228, ../../../sass/screen.scss */
+.create-new-goal {
+  cursor: pointer;
 }
