--- a/app/assets/stylesheets/screen.css
+++ b/app/assets/stylesheets/screen.css
@@ -67,6 +67,11 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
   display: block;
 }
 
+/* line 16, ../../../sass/screen.scss */
+body, html {
+  height: 100%;
+}
+
 @font-face {
   font-family: 'Share Tech';
   font-style: normal;
@@ -74,26 +79,26 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
   src: local("Share Tech"), local("ShareTech-Regular"), url(http://themes.googleusercontent.com/static/fonts/sharetech/v1/riJWcvd3sYdxJpiCWZvUGL3hpw3pgy2gAi-Ip7WPMi0.woff) format("woff");
 }
 
-/* line 25, ../../../sass/screen.scss */
+/* line 28, ../../../sass/screen.scss */
 body {
   color: #8c3a2b;
   font-family: 'Share Tech', sans-serif;
   background-color: #ee6952;
 }
 
-/* line 32, ../../../sass/screen.scss */
+/* line 35, ../../../sass/screen.scss */
 h2 {
   margin-top: 20px;
   margin-bottom: 10px;
   font-size: 40px;
   text-transform: uppercase;
 }
-/* line 37, ../../../sass/screen.scss */
+/* line 40, ../../../sass/screen.scss */
 h2 i {
   color: white;
 }
 
-/* line 39, ../../../sass/screen.scss */
+/* line 42, ../../../sass/screen.scss */
 h3 {
   margin-top: 20px;
   margin-bottom: 10px;
@@ -101,12 +106,12 @@ h3 {
   text-transform: uppercase;
 }
 
-/* line 47, ../../../sass/screen.scss */
+/* line 50, ../../../sass/screen.scss */
 ul {
   list-style-type: circle;
 }
 
-/* line 51, ../../../sass/screen.scss */
+/* line 54, ../../../sass/screen.scss */
 #container {
   width: 80%;
   margin-left: auto;
@@ -114,19 +119,19 @@ ul {
   margin-top: 50px;
 }
 
-/* line 59, ../../../sass/screen.scss */
+/* line 62, ../../../sass/screen.scss */
 p {
   margin-bottom: 10px;
   margin-top: 10px;
 }
 
-/* line 64, ../../../sass/screen.scss */
+/* line 67, ../../../sass/screen.scss */
 a {
   color: white;
   text-decoration: none;
 }
 
-/* line 70, ../../../sass/screen.scss */
+/* line 73, ../../../sass/screen.scss */
 .goal {
   text-decoration: none;
   padding: 5px 0px 5px 0px;
@@ -134,34 +139,34 @@ a {
   font-size: 20px;
   line-height: 25px;
 }
-/* line 76, ../../../sass/screen.scss */
+/* line 79, ../../../sass/screen.scss */
 .goal .icon {
   color: #ee6952;
   cursor: pointer;
 }
-/* line 80, ../../../sass/screen.scss */
+/* line 83, ../../../sass/screen.scss */
 .goal:hover > i {
   color: #8c3a2b;
 }
 
-/* line 84, ../../../sass/screen.scss */
+/* line 87, ../../../sass/screen.scss */
 #completed-goals {
   text-decoration: line-through;
 }
 
-/* line 88, ../../../sass/screen.scss */
+/* line 91, ../../../sass/screen.scss */
 a.mark-it {
   font-size: 15px;
   text-decoration: none;
 }
 
-/* line 90, ../../../sass/screen.scss */
+/* line 93, ../../../sass/screen.scss */
 .column {
   width: 50%;
   float: left;
 }
 
-/* line 97, ../../../sass/screen.scss */
+/* line 100, ../../../sass/screen.scss */
 .circle {
   width: 200px;
   height: 200px;
@@ -177,7 +182,7 @@ a.mark-it {
   margin-top: 20px;
 }
 
-/* line 108, ../../../sass/screen.scss */
+/* line 111, ../../../sass/screen.scss */
 #title-box {
   text-align: center;
   width: 220px;
@@ -185,14 +190,14 @@ a.mark-it {
   float: left;
 }
 
-/* line 115, ../../../sass/screen.scss */
+/* line 118, ../../../sass/screen.scss */
 #top-nav {
   position: absolute;
   right: 0px;
   top: 30px;
 }
 
-/* line 120, ../../../sass/screen.scss */
+/* line 123, ../../../sass/screen.scss */
 #info-bar {
   background-color: #222222;
   overflow: auto;
@@ -200,14 +205,14 @@ a.mark-it {
   padding-bottom: 50px;
 }
 
-/* line 126, ../../../sass/screen.scss */
+/* line 129, ../../../sass/screen.scss */
 .side-pads {
   width: 80%;
   margin: auto;
   position: relative;
 }
 
-/* line 132, ../../../sass/screen.scss */
+/* line 135, ../../../sass/screen.scss */
 input[type="text"] {
   width: 90%;
   border: 0px;
@@ -221,7 +226,7 @@ input[type="text"] {
   margin-bottom: 20px;
 }
 
-/* line 145, ../../../sass/screen.scss */
+/* line 148, ../../../sass/screen.scss */
 textarea {
   width: 90%;
   border: 0px;
@@ -235,32 +240,32 @@ textarea {
   margin-bottom: 20px;
 }
 
-/* line 159, ../../../sass/screen.scss */
+/* line 162, ../../../sass/screen.scss */
 #table-of-contents {
   float: left;
   max-width: 30%;
   margin-right: 40px;
 }
 
-/* line 166, ../../../sass/screen.scss */
+/* line 169, ../../../sass/screen.scss */
 #contents {
   max-width: 60%;
   float: left;
 }
 
-/* line 171, ../../../sass/screen.scss */
+/* line 174, ../../../sass/screen.scss */
 .button {
   color: #ee6952;
   border: 1px solid #ee6952;
   padding: 2px 5px 2px 5px;
   margin: 0px 5px 0px 5px;
 }
-/* line 176, ../../../sass/screen.scss */
+/* line 179, ../../../sass/screen.scss */
 .button:hover {
   color: white;
 }
 
-/* line 183, ../../../sass/screen.scss */
+/* line 186, ../../../sass/screen.scss */
 #goal-stats {
   margin-top: 100px;
   text-transform: uppercase;
@@ -269,12 +274,12 @@ textarea {
   right: 0px;
   color: #ee6952;
 }
-/* line 190, ../../../sass/screen.scss */
+/* line 193, ../../../sass/screen.scss */
 #goal-stats div {
   cursor: pointer;
   margin: 10px 0px 10px 0px;
 }
-/* line 194, ../../../sass/screen.scss */
+/* line 197, ../../../sass/screen.scss */
 #goal-stats .circle-stat {
   margin-right: 10px;
   font-size: 40px;
@@ -289,26 +294,25 @@ textarea {
   color: white;
 }
 
-/* line 210, ../../../sass/screen.scss */
+/* line 213, ../../../sass/screen.scss */
 #detail {
   background-color: #8c3a2b;
   min-height: 100px;
 }
 
-/* line 216, ../../../sass/screen.scss */
+/* line 219, ../../../sass/screen.scss */
 #dark-zone {
   position: absolute;
   z-index: -100;
   width: 50%;
-  height: 100%;
+  min-height: 100%;
   top: 0px;
   bottom: 0px;
   right: 0px;
   background-color: #8c3a2b;
-  min-height: 100px;
 }
 
-/* line 228, ../../../sass/screen.scss */
+/* line 230, ../../../sass/screen.scss */
 .create-new-goal {
   cursor: pointer;
 }
